# Open.AlphaFold2

./: .gitignore  README.md  main.py  pyproject.toml
src/open_alphafold2/: __init__.py  cli.py
src/open_alphafold2/constants/: __init__.py  residue_constants.py
src/open_alphafold2/data/: __init__.py  samples.py  structure_io.py
src/open_alphafold2/geometry/: __init__.py  distances.py
src/open_alphafold2/visualization/: __init__.py  distance_plot.py
tests/: test_distance_plot.py  test_distances.py  test_residue_constants.py  test_samples.py  test_structure_io.py
