[project]
name = "open-alphafold2"
version = "0.1.0"
description = "A small PyTorch AlphaFold2-style implementation built from first principles."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = []

[project.optional-dependencies]
train = [
    "numpy>=2.0",
    "torch>=2.5",
]

[project.scripts]
open-alphafold2 = "open_alphafold2.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
